# ha-ocr-schedulerr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
.agent/: BOARD.md  DECISIONS.md  NOTES.md
.github/workflows/: docker-image.yml
app/: ai_parser.py  bot.py  config.py  ha_client.py  main.py  ocr_parser.py
docs/: MODEL_RECOMMENDATIONS.md
tests/: test_ai_parser.py  test_ocr_parser.py
