[project]
name = "ha-ocr-scheduler"
version = "0.1.0"
description = "Telegram bot that OCRs schedule images and adds entries to Home Assistant calendar"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20,<22",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "httpx>=0.27",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
